# gcor-py

./: .gitignore  LICENSE  Makefile  README.md  README.qmd  README_USER.md  README_USER.qmd  pyproject.toml
docs/: gcor.html  search.js
docs/gcor-py/: gcor.html  index.html  search.js
src/gcor/: __init__.py  _core.py  api.py
tests/: test_discretize.py  test_gcor_basic.py  test_gcor_examples.py  test_qcut_edf.py  test_quantile_edf.py
tests/data/: iris.csv
