[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcor"
version = "0.0.1"
description = "Generalized correlation measures"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Ryota Suzuki", email = "suzuki@ef-prime.com" }
]

dependencies = [
  "pandas>=1.5",
  "numpy>=1.21"
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "jupyter",
  "ipykernel",
  "pyyaml",
  "build>=1.0"
]
